  machine-specific ROMs from inside the sources. (VRI)
- bios/bios.c, include/config.h: Added new define ALWAYS_SHOW_INITINFO to show
  the welcome screen on every boot. Enabled by default on the FireBee. (VRI)
- bios/bios.c, bios/initinfo.c, include/config.h: Added new define
  INITINFO_DURATION to set the welcome screen duration. (VRI)
- bios/machine.c: Fixed machine_name() for the FireBee. (VRI)
- desk/desk_rsc.c: Reworked some dialogs for French texts. (THH)
- po/fr.po: Changed "Pas de clic" to "Auto" to fit the button. (VRI)
- Makefile, include/config.h: Moved machine-specific defines to config.h. (VRI)
- bios/memory.S: Added another sanity check for emulators that do not emulate
  the mirroring of memory banks. (THH)

2011-08-13
- Makefile, bios/bios.c, bios/biosmem.c, bios/startup.S, include/config.h:
  Replaced the is_ramtos variable by the EMUTOS_RAM define to determine if
  EmuTOS is running in RAM. (VRI)

2011-08-14
- bios/comprimg.S, bios/memory.S, bios/startup.S: Fixed the ecpr256k.img target
  compilation (but still not functional). (VRI)

2011-08-15
- Makefile: Allow to build the shared sources with different preprocessor
  defines. (VRI)
- bios/memory.S: Fixed the compressed image targets (ecpr256k.img and
  ecpr192k.img). (VRI)
- bios/tosvars.S: Removed useless globals. (VRI)
- desk/deskmain.c: Removed dead DBG_DESKMAIN. (VRI)
- Makefile, bios/comprimg.S: Use tosvars.S instead of redefining the
  variables. (VRI)
- bios/comprimg.S, util/uncompr.S: Added ColdFire support. (VRI)
- Makefile: Added missing PHONY targets. (VRI)
- Makefile: Added a rule to build .s19 files. (VRI)
- Makefile: Added easily overridable VMA variable. (VRI)

2011-08-16
- Makefile: Disabled special .exe handling no more useful on Cygwin. (VRI)
- *.S: Replaced .xdef by .extern. (VRI)
- bios/screen.c, bios/screen.h: Fixed the STe default palette. (VRI)
- Makefile, bios/bios.c, bios/dmasound.c, bios/dmasound.h, bios/machine.c,
  bios/machine.h: Added LMC1992 initialization. (VRI)